--- a/scss/structure.scss
+++ b/scss/structure.scss
@@ -1,3 +1,12 @@
+@font-face {
+  font-family: ProximaNovaECT;
+  src: url(../Proxima_Nova_Extra_Condensed_Thin.otf);
+}
+@font-face {
+  font-family: GillSansUB;
+  src: url(../GILSANUB.TTF);
+}
+
 * {
   margin: 0;
   padding: 0;
