--- a/scss/home/nav.scss
+++ b/scss/home/nav.scss
@@ -1,8 +1,8 @@
-nav{
+navh{
     max-width: $content-width;
     height:80px;
     margin: 0 auto;
-    border-bottom: 2px solid $site-black;
+    border-bottom: 2px solid $site-white;
     display:flex;
     align-items: center;
     justify-content: space-between;
@@ -11,14 +11,13 @@ nav{
     
 
     span{
-        color:$site-black;
+        color:$site-white;
         margin: 0 20px;
     }
 
     .logo{
         max-width:10%;
         height:53%;
-        color:$site-black;
 
     }
 
@@ -27,7 +26,7 @@ nav{
 
         a{
             font-size: 15px;
-            color:$site-black;
+            color:$site-white;
             text-decoration: none;
             font-family: GillSansUB;
 
