--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,5 +1,9 @@
-@import "variables.scss";
-@import "structure.scss";
-@import "nav/nav.scss";
-@import "footer/footer.scss";
+@import 'variables.scss';
+@import 'structure.scss';
+@import 'home/nav.scss';
+@import 'nav/nav.scss';
+@import 'home/header.scss';
+@import 'home/form-content.scss';
+@import 'home/promotours.scss';
+@import 'footer/footer.scss';
 @import "about/about.scss";
