--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -1,5 +1,18 @@
-$nav-footer-height:100px;
-$content-width:980px;
+$center: 0 auto;
 
-//site colors
-$site-background:#79ADDC;
+//this area is for widths and heights
+$content-width:980px;
+$banner-footer-width:83%;
+$banner-height:58%;
+$home-form-width:52%;
+$nav-footer-height:100px;
+
+
+
+//this is for site colors
+$site-blue:#79addc;
+$site-white:white;
+$site-black: black;
+
+//this area is for buttons
+
