--- a/scss/home/header.scss
+++ b/scss/home/header.scss
@@ -25,8 +25,8 @@
         a{
             margin:0 auto;
             background-color: $site-blue;
-            height:10%;
-            width:10%;
+            height:40px;
+            width:120px;
             font-size: 15px;
             padding-top: 10px;
             padding-bottom:10px;
