--- a/css/styles.css
+++ b/css/styles.css
@@ -52,7 +52,7 @@ navh .logo {
   height: 53%;
 }
 navh .links {
-  max-width: 80%;
+  max-width: 90%;
 }
 navh .links a {
   font-size: 15px;
@@ -61,15 +61,15 @@ navh .links a {
   font-family: GillSansUB;
 }
 
-@media screen and (max-width: 1250px) and (min-width: 890px) {
-  nav .links {
-    margin-left: 20%;
+@media screen and (max-width: 980px) {
+  navh {
+    max-width: 90%;
   }
-}
-@media screen and (max-width: 889px) {
-  nav .links {
-    font-size: 10px;
-    margin-left: 17%;
+  navh span {
+    margin: 0 10px;
+  }
+  navh .links {
+    font-size: 8px;
   }
 }
 nav {
@@ -93,7 +93,7 @@ nav .logo {
   color: black;
 }
 nav .links {
-  max-width: 80%;
+  max-width: 85%;
 }
 nav .links a {
   font-size: 15px;
@@ -102,15 +102,15 @@ nav .links a {
   font-family: GillSansUB;
 }
 
-@media screen and (max-width: 1250px) and (min-width: 890px) {
-  nav .links {
-    margin-left: 20%;
+@media screen and (max-width: 980px) {
+  nav {
+    max-width: 90%;
   }
-}
-@media screen and (max-width: 889px) {
+  nav span {
+    margin: 0 10px;
+  }
   nav .links {
-    font-size: 10px;
-    margin-left: 17%;
+    font-size: 8px;
   }
 }
 .banner {
@@ -140,8 +140,8 @@ nav .links a {
 .banner .herotext a {
   margin: 0 auto;
   background-color: #79addc;
-  height: 10%;
-  width: 10%;
+  height: 40px;
+  width: 120px;
   font-size: 15px;
   padding-top: 10px;
   padding-bottom: 10px;
@@ -488,7 +488,7 @@ nav .links a {
   font-weight: 200px;
 }
 .about .about-header hr {
-  width: 171px;
+  width: 110px;
   height: 2px;
   border-width: 0px;
   background-color: black;
@@ -506,9 +506,10 @@ nav .links a {
   font-family: ProximaNovaECT;
   font-size: 40px;
   letter-spacing: 4px;
+  max-width: 300px;
 }
 .about .about-client-quotes hr {
-  width: 177px;
+  width: 150px;
   height: 2px;
   border-width: 0px;
   background-color: black;
@@ -543,6 +544,27 @@ nav .links a {
   font-size: 20px;
   color: #79addc;
   letter-spacing: 2px;
+}
+
+@media screen and (max-width: 1000px) {
+  .about .about-header {
+    max-width: 90%;
+    margin: 0 auto;
+  }
+  .about .about-client-quotes .client-quotes-title {
+    margin-left: 40px;
+  }
+  .about .about-client-quotes hr {
+    margin-left: 40px;
+  }
+  .about .about-client-quotes .client-box {
+    margin: 0 auto;
+    max-width: 90%;
+    margin-bottom: 30px;
+  }
+  .about .about-client-quotes .client-box .client-box-quote {
+    max-width: 90%;
+  }
 }
 
 /*# sourceMappingURL=styles.css.map */
