--- a/scss/nav/nav.scss
+++ b/scss/nav/nav.scss
@@ -23,7 +23,7 @@ nav{
     }
 
     .links{
-        max-width:80%;
+        max-width:85%;
 
         a{
             font-size: 15px;
@@ -35,20 +35,18 @@ nav{
 
     }
 }
-@media screen and (max-width:1250px) and (min-width:890px) {
+
+
+@media screen and (max-width:$content-width){
     nav{
-        .links{
-            margin-left:20%;
+        max-width: 90%;
+        span{
+            margin: 0 10px;
         }
-    }
-
-}
-
-@media screen and (max-width:889px){
-    nav{
         .links{
-            font-size:10px;
-            margin-left:17%;
+            font-size:8px;
+            
+            
         }
     }
 
